--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.5.3",
     "express": "^4.16.4",
+    "http-proxy": "^1.17.0",
     "mysql": "^2.16.0",
     "path": "^0.12.7",
     "request": "^2.88.0",
